tests/ui/unstable-feature-bound/unstable_inherent_method.stderr
error: attribute should be applied to `impl` or free function outside of any `impl` or trait
  --> $DIR/unstable_inherent_method.rs:11:5
   |
LL |     #[unstable_feature_bound(foo)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     fn foo();
   |     --------- not an `impl` or free function

error: attribute should be applied to `impl` or free function outside of any `impl` or trait
  --> $DIR/unstable_inherent_method.rs:18:5
   |
LL |     #[unstable_feature_bound(foo)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     fn foo() {}
   |     ----------- not an `impl` or free function

error: aborting due to 2 previous errors

